2010-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDate.cpp: Simple RcppDate(SEXP) ctor added
	* inst/include/RcppDate.h: Idem

2010-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppResultSet.cpp: carved out four new wrap() functions by
	splitting the existing code in add() methods off

2010-06-11  Romain Francois <romain@r-enthusiasts.com>

	* R/help.R: workaround to allow the syntax "Rcpp ? something" to
	bring Rcpp documentation

	* inst/include/Rcpp/Module.h: support for exposing public data
	members

	* inst/doc/Rcpp-modules/Rcpp-modules.Rnw: a section to mention fields
	as a way to expose data members

	* inst/Rcpp/traits/is_na.h : new helper class Rcpp::traits::is_na

2010-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.2

	* debian/*: Similarly updated for new release to Debian

2010-06-08  Romain Francois <romain@r-enthusiasts.com>

	* src/RcppCommon.cpp: track if demangling is available (currently
	only available with gcc)

2010-06-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.1

	* debian/*: Similarly updated for new release to Debian

2010-06-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-extending*: Extended mini vignette "Rcpp-extending"

2010-06-07  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-extending*: Added new mini vignette "Rcpp-extending"

2010-06-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ*: Extended mini vignette "Rcpp-FAQ"

2010-06-05  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-FAQ*: Added new mini vignette "Rcpp-FAQ"

2010-06-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h:
	* R/Module.R: support for properties of C++ objects

2010-06-03  Romain Francois <romain@r-enthusiasts.com>

	* src/RcppCommn.cpp: added show method for C++Object and C++Class

	* inst/include/Rcpp/XPtr.h: getTag and getProtected are deprecated, will be